# acceleritas

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  stub.cc
app/acc01/: CMakeLists.txt  acc01.cc
app/acc01/include/: DetectorConstruction.hh  TrackStack.hh
app/acc01/input/: pgun.mac  run.mac
app/acc01/src/: ActionInitialization.cc  CalorimeterHit.cc  DetectorConstruction.cc  DeviceAction.cc  EmStandardNoMsc.cc  GeneratorAction.cc  MagneticField.cc  RunAction.cc  TrackerHit.cc  TrackerSD.cc
app/acc02/: CMakeLists.txt  acc02.cc
app/acc02/include/: DetectorConstruction.hh  EventAction.hh  RunAction.hh  TrackingAction.hh
app/acc02/src/: DetectorConstruction.cc  EventAction.cc  RunAction.cc  TrackingAction.cc
app/g4hpc/: CMakeLists.txt  g4hpc.cc  simple-cms-gpu.root
app/g4hpc/include/: ActionInitialization.hh  CalorimeterHit.hh  CalorimeterSD.hh  Configuration.hh  DetectorConstruction.hh  DeviceAction.hh  DeviceManager.hh  EmStandardNoMsc.hh  EventAction.hh  GeneratorAction.hh  GeneratorMessenger.hh  MagneticField.hh  NameSpace.hh  PhysicsList.hh  RunAction.hh  TrackStack.hh  TrackerHit.hh  TrackerSD.hh  TrackingAction.hh
app/g4hpc/input/: pgun.mac  run.mac  simple-cms-gpu.root
app/g4hpc/src/: ActionInitialization.cc  CalorimeterSD.cc  Configuration.cc  DetectorConstruction.cc  DeviceAction.cc  DeviceManager.cc  EventAction.cc  GeneratorAction.cc  GeneratorMessenger.cc  MagneticField.cc  PhysicsList.cc  RunAction.cc  TrackingAction.cc
app/temp/: LDemoIO.cc  LDemoIO.hh  Transporter.cc  Transporter.hh
cmake/: FindCeleritas.cmake  FindVecGeom.cmake
