#---------------------------------*-CMake-*----------------------------------#
# Copyright 2022 UT-Battelle, LLC and other Celeritas Developers.
# See the top-level COPYRIGHT file for details.
# SPDX-License-Identifier: (Apache-2.0 OR MIT)
#----------------------------------------------------------------------------#
# APPS
#---------------------------------------------------------------------------##

add_subdirectory(acc01)
add_subdirectory(acc02)

#---------------------------------------------------------------------------##
